[package]
name = "lc-render"
version = "0.2.3"
edition = "2018"
authors = ["Andrei Ozerov <andrei.ozerov92@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library to create charts images."
readme = "README.md"
documentation = "https://docs.rs/lc-render"
homepage = "https://github.com/limpidchart/lc-render"
repository = "https://github.com/limpidchart/lc-render.git"
categories = ["graphics"]
keywords = ["graphics"]

[dependencies]
itertools = "0.10.0"
svg = "0.9.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "area_chart"
harness = false

[[bench]]
name = "horizontal_bar_chart"
harness = false

[[bench]]
name = "line_and_vertical_bar_chart"
harness = false

[[bench]]
name = "line_chart"
harness = false

[[bench]]
name = "scatter_chart"
harness = false

[[bench]]
name = "stacked_horizontal_bar_chart"
harness = false

[[bench]]
name = "stacked_vertical_bar_chart"
harness = false

[[bench]]
name = "ten_lines_chart"
harness = false

[[bench]]
name = "ten_scatters_chart"
harness = false

[[bench]]
name = "vertical_bar_chart"
harness = false
